--- a/style.css
+++ b/style.css
@@ -30,3 +30,10 @@ body {
     margin: 50px auto;
     display: block;
 }
+
+#fileupload {
+    position: absolute;
+    top: 150px;
+    color: wheat;
+    z-index: 100; /* always on top on other elements */
+}
