--- a/style.css
+++ b/style.css
@@ -34,7 +34,34 @@ body {
 
 #fileupload {
     position: absolute;
-    top: 150px;
+    top: 10px;
+    font-size: 15px;
     color: wheat;
     z-index: 100; /* always on top on other elements */
+}
+
+#button1 {
+    position: absolute;
+    top: 120px;
+    left: 400px;
+    color: rgb(189, 127, 12);
+    background-color: black;
+    font-size: 10px;
+    padding: 50px;
+    z-index: 100; /* always on top on other elements */
+}
+
+/* #slider{
+    position: absolute;
+    top: 500px;
+    color: wheat;
+    z-index: 100; 
+} */
+
+.slider{
+    position: absolute;
+    top: 60px;
+    color: rgb(210, 182, 132);
+    z-index: 100;
+    font-size: 20px;
 }
