--- a/style.css
+++ b/style.css
@@ -15,11 +15,12 @@ body {
     background: black;
     width: 100%;
     height: 100%;
+    /* height: width/2; */
 }
 
 #canvas1{
     position: absolute;
-    top: 0;
+    top: 0; 
     left: 0;
     width: 100%;
     height: 100%;
