--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
     background: black;
+    background: rgba(100,10,100,0.9);
 }
 
 * {
@@ -12,7 +13,9 @@ body {
     position: absolute;
     top: 0;
     left: 0;
-    background: black;
+    /* background: black; */
+    /* background: rgb(100,100,100); */
+    background: linear-gradient(to bottom right, crimson, orange);
     width: 100%;
     height: 100%;
     /* height: width/2; */
@@ -52,14 +55,7 @@ body {
     z-index: 100; /* always on top on other elements */
 }
 
-/* #slider{
-    position: absolute;
-    top: 500px;
-    color: wheat;
-    z-index: 100; 
-} */
-
-.slider{
+.sliderNew{
     position: absolute;
     top: 60px;
     color: rgb(210, 182, 132);
@@ -67,8 +63,16 @@ body {
     font-size: 20px;
 }
 
-.slider input[type="text"] {
+.barElements{
+    position: absolute;
+    top: 60px;
+    color: rgb(210, 182, 132);
+    z-index: 100;
+    font-size: 20px;
+}
+
+.barElements input[type="text"] {
     flex-shrink: 0;
     width: 50px;
     padding: 0;
-  }
+}
