--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     background: black;
-    background: rgba(100,10,100,0.9);
+    /* background: rgba(100,10,100,0.9); */
 }
 
 * {
@@ -15,7 +15,7 @@ body {
     left: 0;
     /* background: black; */
     /* background: rgb(100,100,100); */
-    background: linear-gradient(to bottom right, crimson, orange);
+    /* background: linear-gradient(to bottom right, crimson, orange); */
     width: 100%;
     height: 100%;
     /* height: width/2; */
@@ -75,4 +75,10 @@ body {
     flex-shrink: 0;
     width: 50px;
     padding: 0;
+}
+
+#audio1{
+    position: absolute;
+    top: -50px;
+    left: 250px;
 }
