--- a/style.css
+++ b/style.css
@@ -49,13 +49,13 @@ body {
     z-index: 100; /* always on top on other elements */
 }
 
-.sliderNew{
+/* .sliderNew{
     position: absolute;
     top: 60px;
     color: rgb(210, 182, 132);
     z-index: 100;
     font-size: 20px;
-}
+} */
 
 .barElements{
     position: absolute;
