--- a/style.css
+++ b/style.css
@@ -1,9 +1,20 @@
 :root {
     /*for font-size: 100% -> rem = 16px (by default)*/
     font-size: 62.5%; /*-> rem = 10px*/
-    /* font-family: 'Sanchez'; */
+    font-family: "Audiowide", sans-serif;
+    text-transform: capitalize;
     --initialSidebarWidth: 50rem;
     --sidebarAudioSpacing: 0.5rem;
+    --backgroundColorInput: rgba(0, 0, 0, 0.704);
+    --backgroundColorOddElement: rgba(255, 255, 255, 0.05);
+    --backgroundColorEvenElement: rgba(162, 162, 162, 0.05);
+    --backgroundColorEvenElementCategoryHover: rgba(0, 0, 0, 0.8);
+    --textColorInput: rgb(239, 239, 239);
+    --textColorVariable: rgb(222, 215, 215, 0.9);
+    --textColorCategory: rgb(24, 84, 214);
+    --textColorCategoryAlpha050: rgba(24, 84, 214, 0.822);
+    --resizerWidth: 0.7rem;
+    
 }
 
 html, body {
@@ -42,45 +53,71 @@ html, body {
     position: relative;
     /* position: absolute; */
     height: 100%;
-    min-width: 5rem;
     width: var(--initialSidebarWidth);
     height: 100%;
     /* height: 100wh; */
     overflow-x: hidden;
     background-color: rgba(255, 255, 255, 0.209);
     text-align: center;
-    padding-right: 0.5rem; /* to compensate resizer width*/ 
+    padding-right: var(--resizerWidth); /* to compensate resizer width*/ 
+    margin: 0;
 }
 
 .resizer {
     position: absolute;
     overflow: hidden;
-    width: 0.5rem;
+    width: var(--resizerWidth);
     height: 100%;
     /* left: 0; */
     right: 0;
-
     cursor: col-resize;
-    background-color: rgb(255, 204, 0);
-}
-
-#fileupload {
-    color: rgb(245, 222, 179);
-    font-size: 1.6rem;
-    z-index: 100; /* always on top on other elements */
-    cursor: pointer;
+    background-color: var(--textColorCategoryAlpha050);
 }
 
 ::-webkit-scrollbar{
-    /* background: rgba(1,1,1,0.2); */
     width: 0rem;
 }
 
-input[type="range"] {
-    width: calc(98% - 5rem); /* 4.5rem because text input width is not enough and it changes line*/
-    height: 0.6rem;
+#fileupload {
+    font-size: 1.6rem;
+    z-index: 100; /* always on top on other elements */
     cursor: pointer;
-    margin-top: -1rem;
+    font-family: "Audiowide", sans-serif;
+    width: 80%;
+    border-radius: 0.5rem;
+}
+
+input::file-selector-button {
+    font-family: "Audiowide", sans-serif;
+    color: var(--textColorVariable);
+    background-color: var(--textColorCategory);
+    /* padding: 0.5em; */
+    border-radius: 0.5rem;
+    /* margin: 0.2rem; */
+    cursor: pointer;
+}
+
+select{
+    font-size: 1.6rem;
+    background-color: var(--backgroundColorInput);
+    color: var(--textColorInput);
+    cursor: pointer;
+    font-family: "Audiowide", sans-serif;
+    border-radius: 0.5rem;
+    width: 60%;
+}
+
+input {
+    background-color: var(--backgroundColorInput);
+    color: var(--textColorInput);
+}
+
+input[type="range"] {
+    width: calc(98% - 6rem); /* 4.5rem because text input width is not enough and it changes line*/
+    height: 0.5rem;
+    cursor: pointer;
+    margin-left: 0.1rem;
+    /* margin-top: -1rem; */
     /* -webkit-appearance: none; */
     /* background: rgba(178, 174, 174, 0.6); */
     /* border-radius: 0rem; */
@@ -90,10 +127,13 @@ input[type="range"] {
 }
 
 input[type="text"] {
-    width: 4.2rem;
-    margin-right: 0.5rem; /*for spacing between the resize bar*/
-    border-radius: 0.5rem;
-    font-size: 1.6rem;
+    width: 5.5rem;
+    margin-right: 0.1rem; /*for spacing between the resize bar*/
+    border-radius: 0.3rem;
+    height: 2rem;
+    font-family: "Audiowide", sans-serif;
+    font-size: 1.3rem;
+    margin-bottom: 0.3rem; /*to make outer div higher*/
     /* display: block; */
 }
 
@@ -104,16 +144,22 @@ input[type="color"] {
 }
 
 .sidebarCategory{
-    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.5);
     font-size: 3.2rem;
     border-radius: 2rem;
     padding: 0.5rem;
     font-weight: 600;
     margin: 0.5rem 0.2rem;
     cursor: pointer;
-    color:rgb(255, 179, 0);
+    color:var(--textColorCategory);
+    margin: 1rem;
+    overflow: hidden;
     /* border-color: red;
     border-width: 2rem; */
+}
+.sidebarCategory:hover{
+    background: var(--backgroundColorEvenElementCategoryHover);
+    transition: 1s;
 }
 
 .sidebarInsideCategoryElements{
@@ -128,31 +174,37 @@ input[type="color"] {
     font-size: 2rem;
     font-weight: 400;
     padding: 0.2rem 0rem;
-    border-radius: 1rem;
+    border-radius: 0.5rem;
     margin: 0.5rem 0rem;
-    color:rgb(230, 225, 213);
-}
-
-.sidebarElement:nth-child(even) {
-    background: rgba(198, 197, 195, 0.524);
+    color: var(--textColorVariable);
 }
 
 .sidebarElement:nth-child(odd) {
-    background: rgba(255, 255, 255, 0.524);
+    background: var(--backgroundColorOddElement);
+}
+
+.sidebarElement:nth-child(even) {
+    background: var(--backgroundColorEvenElement);
 }
 
 .sidebarElement:hover {
-    background-color: rgba(0, 0, 0, 0.9);
+    /* background-color: rgba(0, 0, 0, 0.9); */
+    background-color: var(--textColorCategoryAlpha050);
     transition: 0.5s;
+}
+
+.slider > p {
+    margin-bottom: -1.2rem;
 }
 
 .showHideButton{
     position: absolute;
-    background-color: rgb(244, 237, 237);
     font-size: 5rem;
     border-radius: 0 1rem 1rem 0;
     text-align: center;
     padding: 1rem 1rem;
+    color: rgba(1,1,1,0.6);
+    background-color: rgba(255, 255, 255, 0.07);
 }
 
 .showHideButton:hover{
@@ -164,29 +216,23 @@ input[type="color"] {
     top: 0.5rem;
     left: 0.5rem;
     display: none;
-    background-color: rgba(255, 255, 255, 0.2);
     border-radius: 2rem;
     z-index: 100;
     /* text-align: center; */
 }
 
 #hideMenuButton{
-    top:50%;
-    /* left: calc(2rem - 1rem); */
+    top: calc(50% - 4.8rem); /*minus button height hardcoded*/
     left: var(--initialSidebarWidth);
     font-size: 2rem;
-    color: rgba(1,1,1,0.5);
-    padding: 4rem 0.1rem;
+    background: var(--textColorCategory);
+    padding: 4rem 0.2rem;
     border-radius: 0 1rem 1rem 0;
 }
 
 #audioContainer{
     position:absolute;
-    top: 2.5rem;
-    /* background-color: #1919b1; */
-    /* padding: 0.5rem; */
-    /* width: calc(100% - var(--initialSidebarWidth) - var(--sidebarAudioSpacing)*3); */
-    /* left: calc( var(--sidebarAudioSpacing) + var(--initialSidebarWidth)); */
+    top: 2rem;
     width: calc(100% - var(--initialSidebarWidth));
     left:  var(--initialSidebarWidth);
     justify-content: center;
@@ -202,13 +248,10 @@ input[type="color"] {
     position: relative;
     top: -3px; /*to touch the audio player*/
     left: calc(50% - 4.8rem); /*minus button width hardcoded*/
-    /* left: 50%; */
-    /* left: calc(2rem - 1rem); */
-    /* width:80%; */
     font-size: 2rem;
-    color: rgba(1,1,1,0.5);
-    padding: 0.1rem 4rem;
+    padding: 0.2rem 4rem;
     border-radius: 0 0 1rem 1rem;
+    background-color: rgb(244, 237, 237);
     /* border-radius: 0 1rem 1rem 0; */
 }
 
@@ -217,10 +260,19 @@ input[type="color"] {
     /* position: relative; */
     left: calc(var(--sidebarAudioSpacing) + var(--initialSidebarWidth)); /*+5px space*/
     top: 0.5rem;
-    /* left: 10rem; */
     display: none;
-    background-color: rgba(255, 255, 255, 0.2);
     border-radius: 2rem;
     z-index: 100;
-    /* text-align: center; */
+}
+
+#redName{
+    color:rgba(255, 0, 0, 0.803);
+}
+
+#greenName{
+    color:rgba(0, 128, 0, 0.803);
+}
+
+#blueName{
+    color:rgba(0, 0, 255, 0.803);
 }
